feat(rules): EpisodeTitleExtractor skips wedged holes in movie context (26->24)
episodeTitleFromPosition was emitting episode_title from any hole that
followed a TITLE/year/etc. match — including holes wedged between two
trailing structural properties (source, codec, screen_size, ...).
TypeProcessor then demoted the episode_title back to alternative_title
for movie inputs, so "...WEB-DL SPLIT SCENES MP4-RARBG" produced an
extra alt_title="SPLIT SCENES".

Pre-decide the type in EpisodeTitleExtractor (mirrors TypeProcessor.decide)
and, when type=movie, skip candidate holes whose span is wedged between
a structural property on each side. Holes still in the title region
("OSS_117--Cairo,_Nest_of_Spies") survive and reach the demote-to-alt
path.

Cases 1741, 1742: French Maid Services ... SPLIT SCENES — alt_title
list no longer contains "SPLIT SCENES".

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>