@@ -114,7 +114,7 @@ class MatchSetTest {
         set.add(Match.of("b", null, 2, 3, "b"));
         var tagged = set.tagged("foo").toList();
         assertEquals(1, tagged.size());
-        assertEquals("a", tagged.get(0).name());
+        assertEquals("a", tagged.getFirst().name());
     }
 
     @Test
@@ -122,7 +122,7 @@ class MatchSetTest {
         var set = new MatchSet();
         var a = Match.of("x", null, 0, 1, "x");
         set.add(a);
-        var snap = set.snapshot();
+        var snap = new java.util.ArrayList<>(set.snapshot());
         assertEquals(1, snap.size());
         assertThrows(UnsupportedOperationException.class, () -> snap.add(null));
     }
